<resources>
    <string name="app_name" translatable="false">Tournament Helper</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="table">Table</string>
    <string name="fixtures">Fixtures</string>
    <string name="check_current_tables">Check current tables</string>
    <string name="view_upcoming_fixtures">View upcoming matches</string>
    <string name="add_new_match">Add new match</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="score">Score</string>
    <string name="submit">Submit</string>
    <string name="tournament_name">Tournament name</string>
    <string name="enter_name">Enter name</string>
    <string name="teams_count">Teams count</string>
    <string name="tournament_type">Tournament type</string>
    <string name="generate_schedules">Generate schedules</string>
    <string name="teams">Teams</string>
    <string name="add_or_view_teams">Edit or view teams</string>
    <string name="error_check_inputs">Error! Check inputs!</string>
    <string name="error_invalid_teams_count">Error! Invalid teams count!</string>
    <string name="team_name">Team name</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="play_match">Play match</string>
    <string name="team">Team</string>
    <string name="points">Points</string>
    <string name="games">Games</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="pos">Pos</string>
    <string name="gd">GD</string>
    <string name="home_away_matches">Home/away matches</string>
    <string name="to_next_tour">Go to next tour</string>
    <string name="not_all_matches_played">Not all matches played</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="selected">Selected</string>
    <string name="complete_tournament">Complete tournament</string>
    <string name="tournament_over">Tournament is over</string>
    <string name="results">Results</string>
    <string name="add_new_tournament">Add new Tournament</string>
    <string name="new_match">New match</string>
    <string name="all_teams">All teams</string>

    <string-array name="tournament_types_array">
        <item>League</item> <!-- TYPE_LEAGUE position 0 -->
        <item>Knockout</item> <!-- TYPE_KNOCKOUT position 1 -->
    </string-array>

    <string-array name="languages_entries_array">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="languages_entry_values_array">
        <item>en</item>
        <item>ru</item>
    </string-array>

</resources>
