<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abzagabekov.tournamentapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_tournamentFragment"
            app:destination="@id/tournamentFragment" />
        <action
            android:id="@+id/action_nav_home_to_newTournamentFragment"
            app:destination="@id/newTournamentFragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.abzagabekov.tournamentapp.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/tournamentFragment"
        android:name="com.abzagabekov.tournamentapp.ui.tournament.TournamentFragment"
        android:label="tournament_fragment"
        tools:layout="@layout/tournament_fragment" >
        <action
            android:id="@+id/action_tournamentFragment_to_tablesFragment"
            app:destination="@id/tablesFragment" />
        <action
            android:id="@+id/action_tournamentFragment_to_fixturesFragment"
            app:destination="@id/fixturesFragment" />
        <argument
            android:name="tournament"
            app:argType="com.abzagabekov.tournamentapp.pojo.Tournament" />
        <action
            android:id="@+id/action_tournamentFragment_to_teamsFragment"
            app:destination="@id/teamsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tablesFragment"
        android:name="com.abzagabekov.tournamentapp.ui.tables.TablesFragment"
        android:label="@string/results"
        tools:layout="@layout/tables_fragment" >
        <argument
            android:name="tournamentId"
            app:argType="long" />
        <argument
            android:name="tournamentType"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fixturesFragment"
        android:name="com.abzagabekov.tournamentapp.ui.fixtures.FixturesFragment"
        android:label="@string/fixtures"
        tools:layout="@layout/fixtures_fragment" >
        <action
            android:id="@+id/action_fixturesFragment_to_newMatchFragment"
            app:destination="@id/newMatchFragment" />
        <argument
            android:name="tournamentId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/newTournamentFragment"
        android:name="com.abzagabekov.tournamentapp.ui.newTournament.NewTournamentFragment"
        android:label="@string/add_new_tournament"
        tools:layout="@layout/new_tournament_fragment" >
        <action
            android:id="@+id/action_newTournamentFragment_to_tournamentFragment"
            app:destination="@id/tournamentFragment"
            app:popUpTo="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/newMatchFragment"
        android:name="com.abzagabekov.tournamentapp.ui.newMatch.NewMatchFragment"
        android:label="@string/new_match"
        tools:layout="@layout/new_match_fragment" >
        <argument
            android:name="match"
            app:argType="com.abzagabekov.tournamentapp.pojo.Match" />
        <argument
            android:name="tournamentId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/teamsFragment"
        android:name="com.abzagabekov.tournamentapp.ui.teams.TeamsFragment"
        android:label="@string/all_teams"
        tools:layout="@layout/fragment_teams">
        <argument
            android:name="tournamentId"
            app:argType="long" />
    </fragment>
</navigation>